encoder with tests and mock

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,6 +3,10 @@ linters:
   disable:
     - exhaustivestruct
     - wrapcheck
+    - gofumpt
+    - gci
+    - godox
+    - deadcode
   #deprecated
     - scopelint
     - maligned
