--- a/.golangci.yml
+++ b/.golangci.yml
@@ -15,6 +15,7 @@ issues:
   exclude-rules:
     - path: _test\.go
       linters:
+        - lll
         - funlen
         - goconst
     - path: _mock\.go
