--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,12 @@ notifications:
 
 before_install:
   - go get -t -v ./...
+  - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.39.0
 
 script:
   - go test -v -race ./...
   - go test -covermode=count -coverprofile=coverage.txt ./...
+  - golangci-lint run
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
